--- a/lawsystem/templates/confirmedAds.html
+++ b/lawsystem/templates/confirmedAds.html
@@ -151,7 +151,7 @@
           <td>{{id.expertise}} </td>
           <td>{{id.address}}</td>
           <td>
-          <form  method=POST action="{% url 'view_PDF' %}">
+          <form  method=POST action="{% url 'invoiceHistory' %}">
             {%csrf_token%}
           <button class="view_invoice" name="view_invoice" style="vertical-align:middle" value='{{id.username}}'  ><span>View Invoice </span></button>
         </form>
