--- a/lawsystem/templates/editableinvoice.html
+++ b/lawsystem/templates/editableinvoice.html
@@ -214,7 +214,8 @@
                         },
                        
                     });
-             alert("success"+cli_name);
+             alert('success');
+             
                 });
             });
         </script>
