--- a/lawsystem/templates/advocateRegister.html
+++ b/lawsystem/templates/advocateRegister.html
@@ -114,12 +114,12 @@ this.classList.toggle('fa-eye-slash');
         </script>
    <br>
 
-    <div class="clearfix">
-      <button type="button" class="cancelbtn">Cancel</button>
-      <script type="text/javascript">
-        document.getElementById("cancelbtn").onclick=function(){
-          location.href="/home/";
-        };
+   <div class="clearfix">
+    <button type="button" id="cancelbtn"  class="cancelbtn">Cancel</button>
+    <script type="text/javascript">
+      document.getElementById("cancelbtn").onclick=function(){
+        location.href="/home/";
+      };
 </script>
       <button type="submit" class="signupbtn">Sign Up</button>
     </div>
