--- a/lawsystem/templates/editableinvoice.html
+++ b/lawsystem/templates/editableinvoice.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     {%load static%}
-
+  
 <head>
     <meta charset="utf-8">
     <title>Invoice</title>
@@ -117,8 +117,8 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><a class="cut">-</a><span contenteditable>Front End Consultation</span></td>
-                    <td><span contenteditable>Experience Review</span></td>
+                    <td><a class="cut">-</a><span contenteditable>Example</span></td>
+                    <td><span contenteditable>Example</span></td>
                     <td><span data-prefix>Rs.</span><span contenteditable>150.00</span></td>
                     <td><span contenteditable>4</span></td>
                     <td><span data-prefix>Rs.</span><span>600.00</span></td>
