--- a/lawsystem/templates/home.html
+++ b/lawsystem/templates/home.html
@@ -177,7 +177,7 @@ width: 100%;
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a  class="dropdown-item" href="/clientRegister/">As Client</a>
-              <a  class="dropdown-item" href="/advocateRegister/">As Lawyer</a>
+              <a  class="dropdown-item" href="/advocateRegister/">As Advocate</a>
               
             </div>
           </li>
