--- a/lawsystem/templates/MyAdList.html
+++ b/lawsystem/templates/MyAdList.html
@@ -127,7 +127,7 @@
         {% block content %}
         <br>
 <center>
-    {% if usernameList %}
+    {% if  contactedAdsList%}
       <h2>My Advocate List</h2>
       <br>
      
